--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -2,7 +2,16 @@
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
   <display-name>PropertyManagement</display-name>
   <welcome-file-list>
-    <welcome-file>Home.jsp</welcome-file>
-    
+    <welcome-file>Login.jsp</welcome-file>
   </welcome-file-list>
+  <servlet>
+    <description></description>
+    <display-name>VProperty</display-name>
+    <servlet-name>VProperty</servlet-name>
+    <servlet-class>com.stanley.PropertyManagement.servlet.VProperty</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>VProperty</servlet-name>
+    <url-pattern>/VProperty</url-pattern>
+  </servlet-mapping>
 </web-app>
